force-app/main/default/objects/Case_Config__c/Case_Config__c.object-meta.xml
<CustomObject>
    <description>This is the object to store the specific configs associated with the case object.</description>
    <label>Case_Config</label>
    <nameField>
        <label>Case_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>