force-app/main/default/objects/Case_Config__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>This is the field to hold the amount value of the config object. Length is set as 16 and decimal places as 2.</description>
    <inlineHelpText>Amount for the case config.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>