force-app/main/default/objects/Case_Config__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>This is the field to hold the label value of the case config object. It is unique and case insensitive.</description>
    <inlineHelpText>Label of the case config.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>