force-app/main/default/objects/Case_Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is the field to hold the type value of the case config object.</description>
    <inlineHelpText>Type of the case config.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>